kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: k-test
  name: k-test
spec:
  ports:
  - name: 80-8080
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: k-test
  type: ClusterIP
