kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: k-test
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: k-test
            port:
              number: 80
        path: /
        pathType: Exact
status:
  loadBalancer: {}
